--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Book A Table</h2>
+        <h2>Book A Room</h2>
         <p><span>Book Your</span> <span class="description-title">Stay With Us<br></span></p>
       </div><!-- End Section Title -->
 
@@ -446,7 +446,7 @@
 
         <div class="row g-0" data-aos="fade-up" data-aos-delay="100">
 
-          <div class="col-lg-4 reservation-img" style="background-image: url(assets/img/reservation.jpg);"></div>
+          <div class="col-lg-4 reservation-img" style="background-image: url(assets/image/ex4.jpg);"></div>
 
           <div class="col-lg-8 d-flex align-items-center reservation-form-bg" data-aos="fade-up" data-aos-delay="200">
             <form action="forms/book-a-table.php" method="post" role="form" class="php-email-form">
@@ -479,7 +479,7 @@
                 <div class="loading">Loading</div>
                 <div class="error-message"></div>
                 <div class="sent-message">Your booking request was sent. We will call back or send an Email to confirm your reservation. Thank you!</div>
-                <button type="submit">Book a Table</button>
+                <button type="submit">Book a Room</button>
               </div>
             </form>
           </div><!-- End Reservation Form -->
@@ -564,7 +564,7 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="mb-5">
-          <iframe style="width: 100%; height: 400px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen=""></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3962.9398430607603!2d3.336498974360144!3d6.654378721629908!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103b96aa9e89074f%3A0xe4124b9afe12e35d!2s29%20Abu%20Alfred%20St%2C%20Ojodu%2C%20Lagos%20101232%2C%20Lagos!5e0!3m2!1sen!2sng!4v1734900832649!5m2!1sen!2sng" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div><!-- End Google Maps -->
 
         <div class="row gy-4">
@@ -574,7 +574,7 @@
               <i class="icon bi bi-geo-alt flex-shrink-0"></i>
               <div>
                 <h3>Address</h3>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>39, Abu-Alfred Street, Obawole, Ifako Ijaye, Lagos State.</p>
               </div>
             </div>
           </div><!-- End Info Item -->
@@ -584,7 +584,7 @@
               <i class="icon bi bi-telephone flex-shrink-0"></i>
               <div>
                 <h3>Call Us</h3>
-                <p>+1 5589 55488 55</p>
+                <p>+234 903 118 7255</p>
               </div>
             </div>
           </div><!-- End Info Item -->
@@ -594,7 +594,7 @@
               <i class="icon bi bi-envelope flex-shrink-0"></i>
               <div>
                 <h3>Email Us</h3>
-                <p>info@example.com</p>
+                <p>Kasfadhomes@gmail.com</p>
               </div>
             </div>
           </div><!-- End Info Item -->
@@ -604,7 +604,7 @@
               <i class="icon bi bi-clock flex-shrink-0"></i>
               <div>
                 <h3>Opening Hours<br></h3>
-                <p><strong>Mon-Sat:</strong> 11AM - 23PM; <strong>Sunday:</strong> Closed</p>
+                <p><strong>Mon-sun:</strong> 24/7</p>
               </div>
             </div>
           </div><!-- End Info Item -->
@@ -655,9 +655,9 @@
           <i class="bi bi-geo-alt icon"></i>
           <div class="address">
             <h4>Address</h4>
-            <p>A108 Adam Street</p>
-            <p>New York, NY 535022</p>
-            <p></p>
+            <p>39, Abu-Alfred Street</p>
+            <p>Obawole, Ifako Ijaye</p>
+            <p>Lagos State.</p>
           </div>
 
         </div>
@@ -667,8 +667,8 @@
           <div>
             <h4>Contact</h4>
             <p>
-              <strong>Phone:</strong> <span>+1 5589 55488 55</span><br>
-              <strong>Email:</strong> <span>info@example.com</span><br>
+              <strong>Phone:</strong> <span>+234 903 118 7255</span><br>
+              <strong>Email:</strong> <span>Kasfadhomes@gmail.com</span><br>
             </p>
           </div>
         </div>
@@ -678,8 +678,7 @@
           <div>
             <h4>Opening Hours</h4>
             <p>
-              <strong>Mon-Sat:</strong> <span>11AM - 23PM</span><br>
-              <strong>Sunday</strong>: <span>Closed</span>
+              <strong>Mon-Sun:</strong> <span>24/7</span><br>
             </p>
           </div>
         </div>
@@ -687,10 +686,9 @@
         <div class="col-lg-3 col-md-6">
           <h4>Follow Us</h4>
           <div class="social-links d-flex">
-            <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            <a href="https://wa.me/2349031187255" class="chat"><i class="bi bi-chat"></i></a>
+            <a href="https://www.facebook.com/profile.php?id=61570093483694&mibextid=ZbWKwL" class="facebook"><i class="bi bi-facebook"></i></a>
+            <a href="https://www.instagram.com/kasfadhomes/profilecard/?igsh=cWV1b3NiczZsM3c4" class="instagram"><i class="bi bi-instagram"></i></a>
           </div>
         </div>
 
@@ -698,13 +696,13 @@
     </div>
 
     <div class="container copyright text-center mt-4">
-      <p>© <span>Copyright</span> <strong class="px-1 sitename">Yummy</strong> <span>All Rights Reserved</span></p>
+      <p>© <span>Copyright</span> <strong class="px-1 sitename">Kasfadhomes</strong> <span>All Rights Reserved</span></p>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> Distributed by <a href="https://themewagon.com">ThemeWagon</a>
+        Designed by <a href="https://www.linkedin.com/in/oladipupo-toheeb-838489327?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app">OTF-Code</a>
       </div>
     </div>
 
